Name:                email-postmark
Version:             0.3
Synopsis:            A simple wrapper to send emails via the api of the service postmark (http://postmarkapp.com/)
-- Description:
License:             BSD3
License-file:        LICENSE
Author:              Daniel Patterson
Maintainer:          dbp@riseup.net
-- Copyright:
Category:            Email
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  hs-source-dirs: src
  -- Modules exported by the library.
  Exposed-modules:
    Network.Mail.Postmark

  -- Packages needed in order to build this package.
  Build-depends: base >= 4 && < 5
               , network >= 2 && < 3
               , network-uri
               , HTTP >= 4000 && < 4001
               , bytestring >= 0.9.1 && < 0.11
               , containers >= 0.2 && < 0.5
               , attoparsec >= 0.8 && < 0.11
               , aeson >= 0.3 && < 0.7
               , text